--- a/synthline/style.css
+++ b/synthline/style.css
@@ -98,6 +98,7 @@ body, html {
   justify-content: center;
   align-items: center;
   transition: transform 0.8s ease-in-out;
+  will-change: transform;
   transform-style: preserve-3d;
   perspective: 1000px;
 }
