--- a/synthline/style.css
+++ b/synthline/style.css
@@ -8,7 +8,7 @@
 body, html {
   padding-top: 1rem;
   font-family: 'Barlow', sans-serif;
-  background: url(assets/synthwave-bg.png) no-repeat center center fixed;
+  background: url(assets/synthwave-bg2.png) no-repeat center center fixed;
   background-size: cover;
   color: black;
   overflow-x: hidden;
@@ -88,7 +88,6 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-x: hidden;
   max-width: 900px;
   width: 100%;
   padding: 2rem;
@@ -99,10 +98,11 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  gap: 0.5rem;
+  gap: 0.25rem;
   width: 100%;
   max-width: 900px;
   min-height: 340px;
+  position: relative;
 }
 
 .carousel.rotate-left {
@@ -115,24 +115,23 @@ body, html {
 /* Candle card */
 .candle {
   display: flex;
-  flex: 1 1 250px;
-  max-width: 260px;
-  min-width: 200px;
   flex-direction: column;
   align-items: center;
-  width: 250px;
-  flex-shrink: 0;
+  width: 240px;
+  min-height: 330px;
   transform: scale(0.65);
-  opacity: 0.2;
+  opacity: 0.5;
   transition: all 0.3s ease;
   z-index: 1;
-  min-height: 330px;
+  margin: 0 -30px;
+  flex-shrink: 0;
 }
 
 .candle.center {
   transform: scale(1.15);
   opacity: 1;
   z-index: 2;
+  margin: 0;
 }
 
 @keyframes pulseCenter {
@@ -174,7 +173,7 @@ body, html {
   text-shadow: 0 0 4px #aa66ff;
   backdrop-filter: blur(5px);
   padding: 0.75rem 1rem;
-  margin-bottom: 0;
+  margin-top: 0;
   border-radius: 10px;
   max-width: 100%;
   line-height: 1.5;
@@ -184,6 +183,11 @@ body, html {
 
 .candle.center p {
   display: block;
+}
+
+.candle.center:hover {
+  transform: scale(1.3);
+  cursor: pointer;
 }
 
 .candle:not(.center):hover {
@@ -218,10 +222,9 @@ body, html {
 
 .dot-container {
   display: flex;
-  align-self: center;
   justify-content: center;
   gap: 0.75rem;
-  margin-top: 0.5;
+  margin-top: 0rem;
   margin-bottom: 0.25rem;
 }
 
@@ -270,7 +273,7 @@ body, html {
 
   .carousel-slide {
     justify-content: center;
-    gap: 0rem;
+    gap: 0;
     position: relative;
   }
 
@@ -285,6 +288,7 @@ body, html {
     min-height: 290px;
     transform: scale(0.75);
     margin: 0 -75px;
+    opacity: 0.5;
   }
 
   .candle.center {
