--- a/synthline/style.css
+++ b/synthline/style.css
@@ -8,7 +8,7 @@
 body, html {
   padding-top: 1rem;
   font-family: 'Barlow', sans-serif;
-  background: url(assets/synthwave-bg2.png) no-repeat center center fixed;
+  background: url(assets/synthwave-bg.png) no-repeat center center fixed;
   background-size: cover;
   color: black;
   overflow-x: hidden;
@@ -222,10 +222,19 @@ body, html {
 
 .dot-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  gap: 0.75rem;
-  margin-top: 0rem;
-  margin-bottom: 0.25rem;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 0.75rem;
+}
+
+.candle.center .dot-container {
+  margin-top: 1rem;
+}
+
+.candle:not(.center) .dot-container {
+  display: none;
 }
 
 .dot {
