--- a/synthline/style.css
+++ b/synthline/style.css
@@ -286,22 +286,18 @@ body, html {
     position: relative;
   }
 
-  .candle-img {
-    width: 140px;
-    height: 140px;
-    font-size: 1rem;
-  }
-
   .candle {
-    width: 180px;
-    min-height: 290px;
-    transform: scale(0.75);
-    margin: 0 -75px;
-    opacity: 0.5;
+    display: none;
   }
 
   .candle.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     transform: scale(1);
+    opacity: 1;
+    z-index: 2;
+    margin: 0;
   }
 
   .arrow {
