--- a/synthline/style.css
+++ b/synthline/style.css
@@ -300,6 +300,20 @@ body, html {
     margin: 0;
   }
 
+  .carousel-slide .candle {
+    display: none;
+  }
+  
+  .carousel-slide .candle.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: scale(1);
+    opacity: 1;
+    z-index: 2;
+    margin: 0;
+  }
+
   .arrow {
     font-size: 2rem;
   }
