--- a/shop/style.css
+++ b/shop/style.css
@@ -45,6 +45,7 @@ body {
 }
 
 .shop-title {
+  font-family: 'Nothing You Could Do', sans-serif;
   text-align: center;
   font-size: 3.5rem;
   color: #ff66cc;
@@ -186,7 +187,7 @@ body {
   }
 
   .product-image {
-    margin: 0;
+    margin: -2rem;
     padding: 0;
     box-shadow: none;
     max-width: 280px;
@@ -202,11 +203,13 @@ body {
 
   .product-info {
     text-align: center;
-    padding: 0 1rem;
+    margin-bottom: -8rem;
+    padding: 0;
   }
 
   .product-info h3 {
     font-size: 1.8rem;
+    margin: 0;
   }
 
   .line-tag {
@@ -229,7 +232,7 @@ body {
 
   .candle-rule {
     width: 90%;
-    margin: 2rem auto;
+    margin: 0 auto;
   }
 
   .nav {
@@ -238,8 +241,13 @@ body {
     padding: 1rem;
   }
 
+  .nav-logo {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+
   .nav-links {
-    margin-top: 0.5rem;
     width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -247,7 +255,7 @@ body {
 
   .nav-links a {
     font-size: 1rem;
-    margin-left: auto;
-    margin-right: 0;
+    margin: 0;
+    padding-right: 1rem;
   }
 }
